Frontend/src/features/users/SearchUser/SearchUser.module.css
.searchUserContainer {
  position: relative;
}

.searchUserInput {
  width: 98%;
}

.searchUserInputGroup {
  width: 99.3%;
}

.searchUserDropdown {
  background-color: white;
  position: absolute;
  width: 100%;
  color: #212529;
  overflow: hidden;
}

.searchUserDropdown:hover {
  overflow: scroll;
}

